<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ioanna.tennisscorekeeper.MainActivity"
    android:background="@color/background"
    android:fillViewport="true">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical">
        <LinearLayout
            android:id="@+id/teams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/game_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/game_type"
                    style="@style/Label"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/radioGroup">
                    <RadioButton
                        android:id="@+id/single_game"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/single_game"
                        android:onClick="selectedGameType"
                        style="@style/LabelValue"/>
                    <RadioButton android:id="@+id/double_game"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/double_game"
                        android:onClick="selectedGameType"
                        android:layout_marginLeft="15dp"
                        style="@style/LabelValue"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/num_set"
                    style="@style/Label"/>
                <Spinner
                    android:id="@+id/spinner_set_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/sets"
                    style="@style/LabelValue"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/team1_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/team1_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Label"/>
                <EditText
                    android:id="@+id/team1_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:layout_weight="2"
                    style="@style/LabelValue"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/team2_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/team2_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/Label"/>
                <EditText
                    android:id="@+id/team2_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:layout_weight="2"
                    style="@style/LabelValue"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/start_match"
                android:text="@string/start_match"
                android:onClick="startMatch"
                style="@style/Button"
                android:enabled="false"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <ImageView
            android:id="@+id/tennisCourt"
            android:src="@drawable/mainimage"
            style="@style/Banner"/>
    </LinearLayout>
</ScrollView>