<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ioanna.tennisscorekeeper.ScoreActivity"
    android:background="@color/background"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">
        <TextView
            android:id="@+id/info_area"
            style="@style/InfoArea"/>
        <LinearLayout
            android:id="@+id/layout_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/layout_players_teams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/players_teams"
                    style="@style/ScoreHeader"
                    android:gravity="left"
                    android:paddingLeft="@dimen/paddingRight"/>
                <TextView
                    android:id="@+id/player_team1"
                    style="@style/ScoreItems"
                    android:gravity="left"
                    android:paddingLeft="@dimen/paddingRight"/>
                <TextView
                    android:id="@+id/player_team2"
                    style="@style/ScoreItems"
                    android:gravity="left"
                    android:paddingLeft="@dimen/paddingRight"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_sets1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/set1Label"
                    style="@style/ScoreHeader"
                    android:text="Set 1"/>
                <TextView
                    android:id="@+id/player1Set1"
                    style="@style/ScoreItems"/>
                <TextView
                    android:id="@+id/player2Set1"
                    style="@style/ScoreItems"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/points"
                    style="@style/ScoreHeader" />
                <TextView
                    android:id="@+id/player1Points"
                    style="@style/ScoreItems"/>
                <TextView
                    android:id="@+id/player2Points"
                    style="@style/ScoreItems"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_advantage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/info"
                    style="@style/ScoreHeader" />
                <TextView
                    android:id="@+id/player1Adv"
                    style="@style/ScoreItems"/>
                <TextView
                    android:id="@+id/player2Adv"
                    style="@style/ScoreItems"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/tennisCourt"
            android:src="@drawable/tenniscourt"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>
        <Chronometer
            android:id="@+id/matchTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InfoArea"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/player1Layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/player1_but_section"
                    style="@style/NamingColumn" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnPlayer1Points"
                        android:onClick="player1GetPoint"
                        android:text="@string/get_point"
                        style="@style/Button"/>
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />
            <LinearLayout
                android:id="@+id/player2Layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/player2_but_section"
                    style="@style/NamingColumn" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnPlayer2Points"
                        android:onClick="player2GetPoint"
                        android:text="@string/get_point"
                        style="@style/Button" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorPrimary" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnResetMatch"
                android:onClick="resetMatch"
                android:text="@string/resetMatch"
                style="@style/Button"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>